fix: align header links to center

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -72,6 +72,10 @@
     list-style: none;
 }
 
+.gh-head-nav div a {
+    align-self: center;
+}
+
 .nav li {
     margin: 0;
     padding: 0;
